@@ -3864,37 +3864,6 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|MRJobConfig
-operator|.
-name|MAPREDUCE_JOB_EMIT_TIMELINE_DATA
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|JHEvenHandlerForTest
-name|jheh
-init|=
-operator|new
-name|JHEvenHandlerForTest
-argument_list|(
-name|t
-operator|.
-name|mockAppContext
-argument_list|,
-literal|0
-argument_list|)
-decl_stmt|;
-name|jheh
-operator|.
-name|init
-argument_list|(
-name|conf
-argument_list|)
-expr_stmt|;
 name|MiniYARNCluster
 name|yarnCluster
 init|=
@@ -3942,6 +3911,70 @@ name|yarnCluster
 operator|.
 name|start
 argument_list|()
+expr_stmt|;
+name|Configuration
+name|confJHEH
+init|=
+operator|new
+name|YarnConfiguration
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|confJHEH
+operator|.
+name|setBoolean
+argument_list|(
+name|MRJobConfig
+operator|.
+name|MAPREDUCE_JOB_EMIT_TIMELINE_DATA
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|confJHEH
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_WEBAPP_ADDRESS
+argument_list|,
+name|MiniYARNCluster
+operator|.
+name|getHostname
+argument_list|()
+operator|+
+literal|":"
+operator|+
+name|yarnCluster
+operator|.
+name|getApplicationHistoryServer
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|JHEvenHandlerForTest
+name|jheh
+init|=
+operator|new
+name|JHEvenHandlerForTest
+argument_list|(
+name|t
+operator|.
+name|mockAppContext
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|jheh
+operator|.
+name|init
+argument_list|(
+name|confJHEH
+argument_list|)
 expr_stmt|;
 name|jheh
 operator|.
